fixed ui on mobile too

--- a/src/App.css
+++ b/src/App.css
@@ -300,15 +300,19 @@ button:disabled {
 #root {
   height: 100%; }
 
+@media screen and (max-width: 600px) {
+  flex-basis: 80%;
+  margin-left: calc(10%); }
 .landing-container {
-  height: 100%;
   transition: opacity 3s ease-in-out;
   z-index: 1;
-  margin-top: 20%;
   display: flex;
   flex-direction: column;
-  margin-left: auto;
-  margin-right: auto; }
+  margin: auto;
+  position: relative;
+  top: 200px;
+  flex-basis: 300px;
+  margin-left: calc(50% - 150px); }
 
 .landing-container--goaway {
   opacity: 0; }
@@ -341,7 +345,7 @@ button:disabled {
 
 @media screen and (max-width: 600px) {
   .landing-container {
-    margin-top: 40%; } }
+    top: 100px; } }
 .aboutme__container {
   display: flex;
   margin-top: 200px;
