--- a/src/StylesSCSS/Containers/AppContainer.scss
+++ b/src/StylesSCSS/Containers/AppContainer.scss
@@ -29,3 +29,8 @@
 #root {
     height: 100%;
 }
+
+@media screen and (max-width: 600px) {
+    flex-basis: 80%;
+    margin-left: calc(10%);
+}
