--- a/src/StylesSCSS/Containers/LandingPage.scss
+++ b/src/StylesSCSS/Containers/LandingPage.scss
@@ -1,12 +1,13 @@
 .landing-container {
-    height: 100%;
     transition: opacity 3s ease-in-out;
     z-index: 1;
-    margin-top: 20%;
     display: flex;
     flex-direction: column;
-    margin-left: auto;
-    margin-right: auto;
+    margin: auto;
+    position: relative;
+    top: 200px;
+    flex-basis: 300px;
+    margin-left: calc(50% - 150px);
 }
 
 .landing-container--goaway{
@@ -47,6 +48,6 @@
 
 @media screen and (max-width:600px){
     .landing-container{
-        margin-top: 40%;
+        top: 100px;
     }
 }
